--- a/Project.ipynb
+++ b/Project.ipynb
@@ -32,8 +32,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Account\n",
+    "- accound_id\n",
+    "- district_id\n",
+    "- date\n",
+    "- frequency\n",
+    "\n",
+    "# Client\n",
+    "- client_id\n",
+    "- birth_number\n",
+    "- district_id\n",
+    "\n",
+    "# Disposition\n",
+    "- disp_id\n",
+    "- client_id\n",
+    "- account_id\n",
+    "- type\n",
+    "\n",
+    "# Loan\n",
+    "- loan_id\n",
+    "- account_id\n",
+    "- date\n",
+    "- amount\n",
+    "- duration\n",
+    "- payments\n",
+    "- status\n",
+    "\n",
+    "# Transition\n",
+    "- trans_id\n",
+    "- account_id\n",
+    "- date\n",
+    "- type\n",
+    "- operation\n",
+    "- amount_balance\n",
+    "- k_symbol\n",
+    "- bank\n",
+    "- account"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -57,102 +99,104 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>client_id;\"birth_number\";\"district_id\"</th>\n",
+       "      <th>trans_id;account_id;date;type;operation;amount;balance;k_symbol;bank;account</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1;\"706213\";18</td>\n",
+       "      <td>6145;25;960728;credit;credit in cash;900.00;90...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2;\"450204\";1</td>\n",
+       "      <td>6456;25;960827;credit;credit in cash;15800.00;...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3;\"406009\";1</td>\n",
+       "      <td>6150;25;960903;credit;credit in cash;13067.00;...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4;\"561201\";5</td>\n",
+       "      <td>6171;25;960905;credit;credit in cash;42054.00;...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5;\"605703\";5</td>\n",
+       "      <td>6457;25;960906;withdrawal;withdrawal in cash;3...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5364</th>\n",
-       "      <td>13955;\"456030\";1</td>\n",
+       "      <th>30195</th>\n",
+       "      <td>3412692;11328;980630;withdrawal in cash;withdr...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5365</th>\n",
-       "      <td>13956;\"430406\";1</td>\n",
+       "      <th>30196</th>\n",
+       "      <td>3412768;11328;980630;withdrawal;withdrawal in ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5366</th>\n",
-       "      <td>13968;\"680413\";61</td>\n",
+       "      <th>30197</th>\n",
+       "      <td>3529532;11328;980630;credit;;188.70;40610.80;i...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5367</th>\n",
-       "      <td>13971;\"626019\";67</td>\n",
+       "      <th>30198</th>\n",
+       "      <td>3412694;11328;980703;withdrawal in cash;withdr...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5368</th>\n",
-       "      <td>13998;\"535812\";74</td>\n",
+       "      <th>30199</th>\n",
+       "      <td>3412636;11328;980709;credit;credit in cash;109...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5369 rows × 1 columns</p>\n",
+       "<p>30200 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     client_id;\"birth_number\";\"district_id\"\n",
-       "0                             1;\"706213\";18\n",
-       "1                              2;\"450204\";1\n",
-       "2                              3;\"406009\";1\n",
-       "3                              4;\"561201\";5\n",
-       "4                              5;\"605703\";5\n",
-       "...                                     ...\n",
-       "5364                       13955;\"456030\";1\n",
-       "5365                       13956;\"430406\";1\n",
-       "5366                      13968;\"680413\";61\n",
-       "5367                      13971;\"626019\";67\n",
-       "5368                      13998;\"535812\";74\n",
+       "      trans_id;account_id;date;type;operation;amount;balance;k_symbol;bank;account\n",
+       "0      6145;25;960728;credit;credit in cash;900.00;90...                          \n",
+       "1      6456;25;960827;credit;credit in cash;15800.00;...                          \n",
+       "2      6150;25;960903;credit;credit in cash;13067.00;...                          \n",
+       "3      6171;25;960905;credit;credit in cash;42054.00;...                          \n",
+       "4      6457;25;960906;withdrawal;withdrawal in cash;3...                          \n",
+       "...                                                  ...                          \n",
+       "30195  3412692;11328;980630;withdrawal in cash;withdr...                          \n",
+       "30196  3412768;11328;980630;withdrawal;withdrawal in ...                          \n",
+       "30197  3529532;11328;980630;credit;;188.70;40610.80;i...                          \n",
+       "30198  3412694;11328;980703;withdrawal in cash;withdr...                          \n",
+       "30199  3412636;11328;980709;credit;credit in cash;109...                          \n",
        "\n",
-       "[5369 rows x 1 columns]"
+       "[30200 rows x 1 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "client"
+    "trans_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "706163"
+       "328"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "len(loan_train)"
+   ]
   },
   {
    "cell_type": "code",
