--- a/Project.ipynb
+++ b/Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,15 +15,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3145: DtypeWarning: Columns (8) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n"
+      "/home/ricardo/.local/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3146: DtypeWarning: Columns (8) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
      ]
     }
    ],
@@ -84,7 +84,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getGender(df):\n",
+    "    List = []\n",
+    "    for row in df.itertuples(index = True):\n",
+    "        month = getMonth(row.birth_number)\n",
+    "        birth_number = row.birth_number\n",
+    "        gender = 'M'\n",
+    "        \n",
+    "        if(month > 50):\n",
+    "            birth_number -= 5000\n",
+    "            gender = 'F'\n",
+    "            \n",
+    "        List.append([row.client_id, birth_number, gender, row.district_id])\n",
+    "    \n",
+    "    return pd.DataFrame(List, columns=['client_id', 'birth_number', 'gender', 'district_id'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getMonth(date):\n",
+    "    removeDay = date //100\n",
+    "    month = removeDay % 100\n",
+    "    return month"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,10 +145,286 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>client_id</th>\n",
+       "      <th>birth_number</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>district_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>701213</td>\n",
+       "      <td>F</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>450204</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>401009</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>561201</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>600703</td>\n",
+       "      <td>F</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5364</th>\n",
+       "      <td>13955</td>\n",
+       "      <td>451030</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5365</th>\n",
+       "      <td>13956</td>\n",
+       "      <td>430406</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5366</th>\n",
+       "      <td>13968</td>\n",
+       "      <td>680413</td>\n",
+       "      <td>M</td>\n",
+       "      <td>61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5367</th>\n",
+       "      <td>13971</td>\n",
+       "      <td>621019</td>\n",
+       "      <td>F</td>\n",
+       "      <td>67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5368</th>\n",
+       "      <td>13998</td>\n",
+       "      <td>530812</td>\n",
+       "      <td>F</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5369 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      client_id  birth_number gender  district_id\n",
+       "0             1        701213      F           18\n",
+       "1             2        450204      M            1\n",
+       "2             3        401009      F            1\n",
+       "3             4        561201      M            5\n",
+       "4             5        600703      F            5\n",
+       "...         ...           ...    ...          ...\n",
+       "5364      13955        451030      F            1\n",
+       "5365      13956        430406      M            1\n",
+       "5366      13968        680413      M           61\n",
+       "5367      13971        621019      F           67\n",
+       "5368      13998        530812      F           74\n",
+       "\n",
+       "[5369 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "client_processed = getGender(client)\n",
+    "client_processed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>client_id</th>\n",
+       "      <th>birth_number</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>district_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>701213</td>\n",
+       "      <td>F</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>450204</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>401009</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>561201</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>600703</td>\n",
+       "      <td>F</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5364</th>\n",
+       "      <td>13955</td>\n",
+       "      <td>451030</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5365</th>\n",
+       "      <td>13956</td>\n",
+       "      <td>430406</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5366</th>\n",
+       "      <td>13968</td>\n",
+       "      <td>680413</td>\n",
+       "      <td>M</td>\n",
+       "      <td>61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5367</th>\n",
+       "      <td>13971</td>\n",
+       "      <td>621019</td>\n",
+       "      <td>F</td>\n",
+       "      <td>67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5368</th>\n",
+       "      <td>13998</td>\n",
+       "      <td>530812</td>\n",
+       "      <td>F</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5369 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      client_id  birth_number gender  district_id\n",
+       "0             1        701213      F           18\n",
+       "1             2        450204      M            1\n",
+       "2             3        401009      F            1\n",
+       "3             4        561201      M            5\n",
+       "4             5        600703      F            5\n",
+       "...         ...           ...    ...          ...\n",
+       "5364      13955        451030      F            1\n",
+       "5365      13956        430406      M            1\n",
+       "5366      13968        680413      M           61\n",
+       "5367      13971        621019      F           67\n",
+       "5368      13998        530812      F           74\n",
+       "\n",
+       "[5369 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "client_processed"
+   ]
   }
  ],
  "metadata": {
@@ -133,7 +443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
