--- a/Project.ipynb
+++ b/Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,15 +15,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/ricardo/.local/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3146: DtypeWarning: Columns (8) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+      "/usr/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3145: DtypeWarning: Columns (8) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n"
      ]
     }
    ],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +445,7 @@
        "[403 rows x 16 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,13 +474,371 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "predict_loan = {'Id': X_test[\"loan_id\"], 'Predicted': y_test}\n",
     "df = pd.DataFrame(data=predict_loan)\n",
     "df.to_csv('loan_predict.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def report(results, n_top=3):\n",
+    "    res = []\n",
+    "    res_i = 0\n",
+    "    for i in range(1, n_top + 1):\n",
+    "        candidates = np.flatnonzero(results['rank_test_score'] == i)\n",
+    "        for candidate in candidates:\n",
+    "            res.append([np.multiply(results['mean_test_score'][candidate], -1), \n",
+    "                        results['std_test_score'][candidate]])\n",
+    "            for key in results['params'][candidate].keys():\n",
+    "                res[res_i].append(results['params'][candidate][key])\n",
+    "            res_i+=1\n",
+    "    \n",
+    "    columns = ['Mean absolute error', 'std'] + list(results['params'][candidate].keys())\n",
+    "    display(pd.DataFrame(res, columns=columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import RandomizedSearchCV, KFold\n",
+    "\n",
+    "def find_best_params_kfold(model, X, y, param_grid, n_iter=10, n_splits=3):\n",
+    "    kfold = KFold(n_splits=n_splits, shuffle=True, random_state=0)\n",
+    "    search = RandomizedSearchCV(model, param_grid, scoring=\"neg_mean_absolute_error\", n_jobs=-1, n_iter=n_iter, cv=kfold, verbose=0, random_state=0)\n",
+    "    result = search.fit(X, y)\n",
+    "    \n",
+    "    report(result.cv_results_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mean absolute error</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min_samples_split</th>\n",
+       "      <th>max_depth</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.292235</td>\n",
+       "      <td>0.113927</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.310227</td>\n",
+       "      <td>0.115396</td>\n",
+       "      <td>9</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.316477</td>\n",
+       "      <td>0.134030</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.316477</td>\n",
+       "      <td>0.113644</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.316477</td>\n",
+       "      <td>0.134030</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.316477</td>\n",
+       "      <td>0.109941</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Mean absolute error       std  min_samples_split  max_depth\n",
+       "0             0.292235  0.113927                  5          4\n",
+       "1             0.310227  0.115396                  9          6\n",
+       "2             0.316477  0.134030                  9          2\n",
+       "3             0.316477  0.113644                  2          6\n",
+       "4             0.316477  0.134030                  6          2\n",
+       "5             0.316477  0.109941                  4          3"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "max_depth = range(2, 30, 1)\n",
+    "min_samples_split = range(1, 10, 1)\n",
+    "\n",
+    "param_grid = dict(max_depth=max_depth, min_samples_split=min_samples_split)\n",
+    "\n",
+    "find_best_params_kfold(tree.DecisionTreeClassifier(random_state=0), X_train, y_train, param_grid, \n",
+    "                       n_iter=50, n_splits=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classifier_cart = tree.DecisionTreeClassifier(max_depth=4, min_samples_split=5, random_state=0)\n",
+    "classifier_cart = classifier_cart.fit(X_train, y_train)\n",
+    "\n",
+    "y_test_cart = classifier_cart.predict(X_test)\n",
+    "df = pd.DataFrame(data={'Id': X_test[\"loan_id\"], 'Predicted': y_test_cart})\n",
+    "df.to_csv('loan_predict_cart.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import BaggingClassifier\n",
+    "n_estimators = range(50, 1000, 50)\n",
+    "param_grid = dict(n_estimators=n_estimators)\n",
+    "\n",
+    "find_best_params_kfold(BaggingClassifier(base_estimator=regr_cart,\n",
+    "                                        n_jobs=-1, random_state=0), \n",
+    "                       X, y, param_grid, n_iter=30, n_splits=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     -1\n",
+       "1      1\n",
+       "2      1\n",
+       "3      1\n",
+       "4      1\n",
+       "      ..\n",
+       "323    1\n",
+       "324   -1\n",
+       "325    1\n",
+       "326    1\n",
+       "327    1\n",
+       "Name: status, Length: 328, dtype: int64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>client_id</th>\n",
+       "      <th>birth_number</th>\n",
+       "      <th>client_district_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>706213</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>450204</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>406009</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>561201</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>605703</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5364</th>\n",
+       "      <td>13955</td>\n",
+       "      <td>456030</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5365</th>\n",
+       "      <td>13956</td>\n",
+       "      <td>430406</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5366</th>\n",
+       "      <td>13968</td>\n",
+       "      <td>680413</td>\n",
+       "      <td>61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5367</th>\n",
+       "      <td>13971</td>\n",
+       "      <td>626019</td>\n",
+       "      <td>67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5368</th>\n",
+       "      <td>13998</td>\n",
+       "      <td>535812</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5369 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      client_id  birth_number  client_district_id\n",
+       "0             1        706213                  18\n",
+       "1             2        450204                   1\n",
+       "2             3        406009                   1\n",
+       "3             4        561201                   5\n",
+       "4             5        605703                   5\n",
+       "...         ...           ...                 ...\n",
+       "5364      13955        456030                   1\n",
+       "5365      13956        430406                   1\n",
+       "5366      13968        680413                  61\n",
+       "5367      13971        626019                  67\n",
+       "5368      13998        535812                  74\n",
+       "\n",
+       "[5369 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cross_validationScores(modelName, model, X, y, n_folds=10):\n",
+    "    metrics = {'MAE': 'neg_mean_absolute_error', \n",
+    "               'RMSE': 'neg_root_mean_squared_error'}\n",
+    "    \n",
+    "    kfold = KFold(n_splits=n_folds, shuffle=True, random_state=0)\n",
+    "    scores = cross_validate(model, X, y, cv=kfold, scoring=metrics, n_jobs=-1)\n",
+    "\n",
+    "    # multiply by -1 because sklearn scoring metrics are negative\n",
+    "    mean_mae_score = np.multiply(scores['test_MAE'], -1).mean()\n",
+    "    std_mae_score = np.multiply(scores['test_MAE'], -1).std()\n",
+    "    mean_rmse_score = np.multiply(scores['test_RMSE'], -1).mean()\n",
+    "    std_rmse_score = np.multiply(scores['test_RMSE'], -1).std()\n",
+    "\n",
+    "    model_score = pd.DataFrame([[mean_mae_score, mean_rmse_score]], \n",
+    "                             columns=['MAE', 'RMSE'], index=[modelName])\n",
+    "    global models_mean_scores\n",
+    "    models_mean_scores = models_mean_scores.append(model_score)\n",
+    "\n",
+    "    print(str(n_folds) + \" fold Cross validation scores for \" + modelName)\n",
+    "    score_df = pd.DataFrame([[mean_mae_score, std_mae_score], \n",
+    "                                  [mean_rmse_score, std_rmse_score]], \n",
+    "                                 columns=['Mean score', 'std'], \n",
+    "                                 index=['MAE', 'RMSE'])\n",
+    "    display(score_df)"
    ]
   }
  ],
@@ -500,7 +858,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
