--- a/Preprocess.ipynb
+++ b/Preprocess.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,55 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'./data/client.csv': 'client',\n",
-       " './data/account.csv': 'account',\n",
-       " './data/trans_train.csv': 'trans_train',\n",
-       " './data/trans_test.csv': 'trans_test',\n",
-       " './data/loan_test.csv': 'loan_test',\n",
-       " './data/disp.csv': 'disp',\n",
-       " './data/district.csv': 'district',\n",
-       " './data/card_test.csv': 'card_test',\n",
-       " './data/loan_train.csv': 'loan_train',\n",
-       " './data/card_train.csv': 'card_train',\n",
-       " './data/processed/client.csv': 'processed_client',\n",
-       " './data/processed/account.csv': 'processed_account',\n",
-       " './data/processed/loans_train_merge.csv': 'processed_loans_train_merge',\n",
-       " './data/processed/trans_train.csv': 'processed_trans_train',\n",
-       " './data/processed/trans_test.csv': 'processed_trans_test',\n",
-       " './data/processed/loan_test.csv': 'processed_loan_test',\n",
-       " './data/processed/loan_train.csv': 'processed_loan_train',\n",
-       " './data/processed/loans_test_merge.csv': 'processed_loans_test_merge'}"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dic_csv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def make_df(dic):\n",
-    "    for key in dic:\n",
-    "        globals()[dic[key]] = pd.read_csv(key, delimiter=\";\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -95,12 +47,29 @@
     }
    ],
    "source": [
+    "def make_df(dic):\n",
+    "    for key in dic:\n",
+    "        globals()[dic[key]] = pd.read_csv(key, delimiter=\";\")\n",
     "make_df(dic_csv)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def separate(df, column):\n",
+    "    list = df[column].unique().tolist()\n",
+    "    dic = {}\n",
+    "    for l in list:\n",
+    "        dic[l] = df[df[column]==l]\n",
+    "    return dic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -124,47 +93,65 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>loan_id</th>\n",
        "      <th>account_id</th>\n",
-       "      <th>district_id</th>\n",
-       "      <th>frequency</th>\n",
        "      <th>date</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>payments</th>\n",
+       "      <th>status</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>576</td>\n",
-       "      <td>55</td>\n",
-       "      <td>monthly issuance</td>\n",
-       "      <td>930101</td>\n",
+       "      <td>5314</td>\n",
+       "      <td>1787</td>\n",
+       "      <td>930705</td>\n",
+       "      <td>96396</td>\n",
+       "      <td>12</td>\n",
+       "      <td>8033</td>\n",
+       "      <td>-1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3818</td>\n",
-       "      <td>74</td>\n",
-       "      <td>monthly issuance</td>\n",
-       "      <td>930101</td>\n",
+       "      <td>5316</td>\n",
+       "      <td>1801</td>\n",
+       "      <td>930711</td>\n",
+       "      <td>165960</td>\n",
+       "      <td>36</td>\n",
+       "      <td>4610</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>704</td>\n",
-       "      <td>55</td>\n",
-       "      <td>monthly issuance</td>\n",
-       "      <td>930101</td>\n",
+       "      <td>6863</td>\n",
+       "      <td>9188</td>\n",
+       "      <td>930728</td>\n",
+       "      <td>127080</td>\n",
+       "      <td>60</td>\n",
+       "      <td>2118</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2378</td>\n",
-       "      <td>16</td>\n",
-       "      <td>monthly issuance</td>\n",
-       "      <td>930101</td>\n",
+       "      <td>5325</td>\n",
+       "      <td>1843</td>\n",
+       "      <td>930803</td>\n",
+       "      <td>105804</td>\n",
+       "      <td>36</td>\n",
+       "      <td>2939</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2632</td>\n",
-       "      <td>24</td>\n",
-       "      <td>monthly issuance</td>\n",
-       "      <td>930102</td>\n",
+       "      <td>7240</td>\n",
+       "      <td>11013</td>\n",
+       "      <td>930906</td>\n",
+       "      <td>274740</td>\n",
+       "      <td>60</td>\n",
+       "      <td>4579</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -172,71 +159,142 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4495</th>\n",
-       "      <td>124</td>\n",
-       "      <td>55</td>\n",
-       "      <td>monthly issuance</td>\n",
-       "      <td>971228</td>\n",
+       "      <th>349</th>\n",
+       "      <td>4989</td>\n",
+       "      <td>105</td>\n",
+       "      <td>981205</td>\n",
+       "      <td>352704</td>\n",
+       "      <td>48</td>\n",
+       "      <td>7348</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4496</th>\n",
-       "      <td>3958</td>\n",
-       "      <td>59</td>\n",
-       "      <td>monthly issuance</td>\n",
-       "      <td>971228</td>\n",
+       "      <th>350</th>\n",
+       "      <td>5221</td>\n",
+       "      <td>1284</td>\n",
+       "      <td>981205</td>\n",
+       "      <td>52512</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4376</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4497</th>\n",
-       "      <td>777</td>\n",
-       "      <td>30</td>\n",
-       "      <td>monthly issuance</td>\n",
-       "      <td>971228</td>\n",
+       "      <th>351</th>\n",
+       "      <td>6402</td>\n",
+       "      <td>6922</td>\n",
+       "      <td>981206</td>\n",
+       "      <td>139488</td>\n",
+       "      <td>24</td>\n",
+       "      <td>5812</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4498</th>\n",
-       "      <td>1573</td>\n",
-       "      <td>63</td>\n",
-       "      <td>monthly issuance</td>\n",
-       "      <td>971229</td>\n",
+       "      <th>352</th>\n",
+       "      <td>5346</td>\n",
+       "      <td>1928</td>\n",
+       "      <td>981206</td>\n",
+       "      <td>55632</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2318</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4499</th>\n",
-       "      <td>3276</td>\n",
-       "      <td>1</td>\n",
-       "      <td>monthly issuance</td>\n",
-       "      <td>971229</td>\n",
+       "      <th>353</th>\n",
+       "      <td>6748</td>\n",
+       "      <td>8645</td>\n",
+       "      <td>981208</td>\n",
+       "      <td>240900</td>\n",
+       "      <td>60</td>\n",
+       "      <td>4015</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4500 rows × 4 columns</p>\n",
+       "<p>682 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      account_id  district_id         frequency    date\n",
-       "0            576           55  monthly issuance  930101\n",
-       "1           3818           74  monthly issuance  930101\n",
-       "2            704           55  monthly issuance  930101\n",
-       "3           2378           16  monthly issuance  930101\n",
-       "4           2632           24  monthly issuance  930102\n",
-       "...          ...          ...               ...     ...\n",
-       "4495         124           55  monthly issuance  971228\n",
-       "4496        3958           59  monthly issuance  971228\n",
-       "4497         777           30  monthly issuance  971228\n",
-       "4498        1573           63  monthly issuance  971229\n",
-       "4499        3276            1  monthly issuance  971229\n",
+       "     loan_id  account_id    date  amount  duration  payments  status\n",
+       "0       5314        1787  930705   96396        12      8033    -1.0\n",
+       "1       5316        1801  930711  165960        36      4610     1.0\n",
+       "2       6863        9188  930728  127080        60      2118     1.0\n",
+       "3       5325        1843  930803  105804        36      2939     1.0\n",
+       "4       7240       11013  930906  274740        60      4579     1.0\n",
+       "..       ...         ...     ...     ...       ...       ...     ...\n",
+       "349     4989         105  981205  352704        48      7348     NaN\n",
+       "350     5221        1284  981205   52512        12      4376     NaN\n",
+       "351     6402        6922  981206  139488        24      5812     NaN\n",
+       "352     5346        1928  981206   55632        24      2318     NaN\n",
+       "353     6748        8645  981208  240900        60      4015     NaN\n",
        "\n",
-       "[4500 rows x 4 columns]"
+       "[682 rows x 7 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "account"
+    "def concat_train_test(dic):\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[False, True, False, False, False, False, False, False, False, False]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l = list(dic_csv.values())\n",
+    "#dd = [l for l in [ 'account' in dl dl for d]]\n",
+    "dd = ['account' in d for d in l]\n",
+    "dd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['client',\n",
+       " 'account',\n",
+       " 'trans_train',\n",
+       " 'trans_test',\n",
+       " 'loan_test',\n",
+       " 'disp',\n",
+       " 'district',\n",
+       " 'card_test',\n",
+       " 'loan_train',\n",
+       " 'card_train']"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l"
    ]
   },
   {
@@ -245,97 +303,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "account = pd.read_csv('data/account.csv', delimiter=\";\")\n",
-    "card_test = pd.read_csv('data/card_test.csv', delimiter=\";\")\n",
-    "card_train = pd.read_csv('data/card_train.csv', delimiter=\";\")\n",
-    "client = pd.read_csv('data/client.csv', delimiter=\";\")\n",
-    "disp = pd.read_csv('data/disp.csv', delimiter=\";\")\n",
-    "district = pd.read_csv('data/district.csv', delimiter=\";\")\n",
-    "loan_test = pd.read_csv('data/loan_test.csv', delimiter=\";\")\n",
-    "loan_train = pd.read_csv('data/loan_train.csv', delimiter=\";\")\n",
-    "trans_test = pd.read_csv('data/trans_test.csv', delimiter=\";\")\n",
-    "trans_train = pd.read_csv('data/trans_train.csv', delimiter=\";\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "CSV_files = {'account': account, 'card': card_train, 'client': client, 'disp': disp, 'disctrict': district, 'loan': loan_train, 'trans': trans_train}\n",
-    "conn = sqlite3.connect('database.db')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def getCorr(df, size=(11,9)):\n",
-    "    corr = df.corr()\n",
-    "    ax = plt.subplots(figsize=size)\n",
-    "    ax = sns.heatmap(corr,  annot = True, linewidths=.1, mask = np.triu(corr), cmap='coolwarm')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def checkUniqueCategoricalVars():\n",
-    "    for f in CSV_files:\n",
-    "        print(\"{}:\\n {}\\n\\n\".format(f, CSV_files[f].select_dtypes(include=['object']).nunique()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Correr só uma vez\n",
-    "for f in CSV_files:\n",
-    "    CSV_files[f].to_sql(f, conn)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = \"\"\"\n",
+    "def db():\n",
+    "    CSV_files = {'account': account, 'card': card_train, 'client': client, 'disp': disp, 'disctrict': district, 'loan': loan_train, 'trans': trans_train}\n",
+    "    conn = sqlite3.connect('database.db')\n",
+    "    # Correr só uma vez\n",
+    "    if not os.path.exists('./database.db'):\n",
+    "        for f in CSV_files:\n",
+    "            CSV_files[f].to_sql(f, conn)\n",
+    "    query = \"\"\"\n",
     "        SELECT loan_id, loan.account_id, status\n",
     "        FROM loan, account\n",
     "        WHERE loan.account_id == account.account_id\n",
     "        \"\"\"\n",
     "         \n",
-    "pd.read_sql_query(query, conn)"
+    "    pd.read_sql_query(query, conn)\n",
+    "    \n",
+    "def getCorr(df, size=(11,9)):\n",
+    "    corr = df.corr()\n",
+    "    ax = plt.subplots(figsize=size)\n",
+    "    ax = sns.heatmap(corr,  annot = True, linewidths=.1, mask = np.triu(corr), cmap='coolwarm')\n",
+    "\n",
+    "    def checkUniqueCategoricalVars():\n",
+    "    for f in CSV_files:\n",
+    "        print(\"{}:\\n {}\\n\\n\".format(f, CSV_files[f].select_dtypes(include=['object']).nunique()))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = \"\"\"\n",
-    "        SELECT *\n",
-    "        FROM account\n",
-    "        \"\"\"\n",
-    "         \n",
-    "pd.read_sql_query(query, conn)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
