--- a/Project.ipynb
+++ b/Project.ipynb
@@ -47,15 +47,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "Fitting 10 folds for each of 1920 candidates, totalling 19200 fits\n[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n[Parallel(n_jobs=-1)]: Done  34 tasks      | elapsed:    0.3s\n[Parallel(n_jobs=-1)]: Done 896 tasks      | elapsed:    5.4s\n[Parallel(n_jobs=-1)]: Done 2520 tasks      | elapsed:   15.1s\n[Parallel(n_jobs=-1)]: Done 4784 tasks      | elapsed:   28.3s\n[Parallel(n_jobs=-1)]: Done 7704 tasks      | elapsed:   45.3s\n[Parallel(n_jobs=-1)]: Done 11264 tasks      | elapsed:  1.1min\n[Parallel(n_jobs=-1)]: Done 15480 tasks      | elapsed:  1.5min\n[Parallel(n_jobs=-1)]: Done 19200 out of 19200 | elapsed:  2.0min finished\nBest Score: nan\nBest Parameters: {&#39;classification__class_weight&#39;: &#39;balanced&#39;, &#39;classification__criterion&#39;: &#39;gini&#39;, &#39;classification__max_depth&#39;: 2, &#39;classification__max_features&#39;: &#39;auto&#39;, &#39;classification__min_impurity_split&#39;: 0.05, &#39;classification__min_samples_leaf&#39;: 1, &#39;classification__min_samples_split&#39;: 2, &#39;classification__splitter&#39;: &#39;best&#39;}\n"
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "False"
+     },
+     "metadata": {},
+     "execution_count": 12
     }
    ],
    "source": [
@@ -63,7 +66,8 @@
     "df = original_loan_per_year[1993].copy()\n",
     "X_train = df.drop(columns=['status', 'loan_id', 'account_id', \"unemploymant rate '95 \", 'card_type', 'name', 'operation_n_credit_card_withdrawal'], axis=1)\n",
     "y_train = df['status'].copy()\n",
-    "best_score, best_params = ClassifierDecisionTree(X_train, y_train)"
+    "    \n",
+    "#best_score, best_params = ClassifierDecisionTree(X_train, y_train)"
    ]
   },
   {
@@ -127,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {
     "tags": []
    },
@@ -135,7 +139,21 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "[-1  1 -1  1  1 -1  1  1  1  1  1  1  1 -1  1  1  1  1 -1  1  1  1  1 -1\n  1  1  1 -1  1  1  1  1  1  1  1 -1  1 -1  1 -1  1  1 -1  1  1  1  1 -1\n -1 -1 -1  1  1  1  1  1  1  1  1 -1 -1  1 -1  1 -1  1 -1  1  1 -1  1 -1\n  1  1  1  1  1  1 -1 -1 -1 -1  1  1  1  1  1 -1  1  1  1  1  1  1  1  1\n -1  1  1  1  1]\n[ 1  1  1  1 -1 -1  1  1  1 -1  1 -1  1  1  1  1 -1  1  1  1  1  1  1  1\n  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1 -1  1  1  1 -1  1  1\n  1 -1  1  1  1  1  1 -1  1  1  1  1  1  1  1  1  1 -1  1  1  1  1  1 -1\n  1  1  1  1  1  1  1  1 -1  1  1  1  1  1  1  1  1  1  1 -1  1 -1  1  1\n  1  1  1  1  1]\n"
+     "text": "[ 1  1  1 -1  1 -1  1  1  1  1  1  1  1  1  1  1 -1  1 -1  1 -1 -1 -1 -1\n  1  1  1 -1  1  1  1 -1  1 -1  1 -1 -1  1 -1 -1  1  1  1 -1  1  1  1 -1\n -1  1 -1  1  1 -1 -1 -1  1 -1 -1  1 -1  1  1 -1  1  1  1 -1  1 -1  1 -1\n  1  1  1 -1  1  1  1 -1 -1 -1  1 -1 -1 -1 -1 -1  1  1 -1 -1  1 -1  1 -1\n  1  1  1  1 -1]\n[ 1  1  1  1 -1 -1  1  1  1 -1  1 -1  1  1  1  1 -1  1  1  1  1  1  1  1\n  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1 -1  1  1  1 -1  1  1\n  1 -1  1  1  1  1  1 -1  1  1  1  1  1  1  1  1  1 -1  1  1  1  1  1 -1\n  1  1  1  1  1  1  1  1 -1  1  1  1  1  1  1  1  1  1  1 -1  1 -1  1  1\n  1  1  1  1  1]\n"
+    },
+    {
+     "output_type": "error",
+     "ename": "ValueError",
+     "evalue": "Classification metrics can&#39;t handle a mix of unknown and binary targets",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m&lt;ipython-input-17-e814464ce667&gt;\u001b[0m in \u001b[0;36m&lt;module&gt;\u001b[0;34m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mconfusion_matrix\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;31m#auc_scores.append(auc)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---&gt; 15\u001b[0;31m \u001b[0mconfusion_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;31m#plot_roc_auc(fpr, tpr, auc)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36minner_f\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     70\u001b[0m                           FutureWarning)\n\u001b[1;32m     71\u001b[0m         \u001b[0mkwargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0marg\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marg\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---&gt; 72\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     73\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0minner_f\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     74\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/sklearn/metrics/_classification.py\u001b[0m in \u001b[0;36mconfusion_matrix\u001b[0;34m(y_true, y_pred, labels, sample_weight, normalize)\u001b[0m\n\u001b[1;32m    274\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    275\u001b[0m     &quot;&quot;&quot;\n\u001b[0;32m--&gt; 276\u001b[0;31m     \u001b[0my_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_check_targets\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    277\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0my_type\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m&quot;binary&quot;\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m&quot;multiclass&quot;\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    278\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m&quot;%s is not supported&quot;\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0my_type\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/sklearn/metrics/_classification.py\u001b[0m in \u001b[0;36m_check_targets\u001b[0;34m(y_true, y_pred)\u001b[0m\n\u001b[1;32m     88\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_type\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m&gt;\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---&gt; 90\u001b[0;31m         raise ValueError(&quot;Classification metrics can&#39;t handle a mix of {0} &quot;\n\u001b[0m\u001b[1;32m     91\u001b[0m                          &quot;and {1} targets&quot;.format(type_true, type_pred))\n\u001b[1;32m     92\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Classification metrics can&#39;t handle a mix of unknown and binary targets"
+     ]
     }
    ],
    "source": [
@@ -151,9 +169,9 @@
     "print(np.array(y_test.astype(int)))\n",
     "#fpr, tpr, _ = metrics.roc_curve(y_test, y_pred)\n",
     "#auc = metrics.auc(fpr, tpr)\n",
-    "\n",
+    "from sklearn.metrics import confusion_matrix\n",
     "#auc_scores.append(auc)\n",
-    "#confusion_matrixes = metrics.confusion_matrix(y_test, y_pred).ravel()\n",
+    "confusion_matrix(y_test, y_pred).ravel()\n",
     "\n",
     "#plot_roc_auc(fpr, tpr, auc)"
    ]
@@ -189,7 +207,7 @@
    "source": [
     "def plot_roc_auc(fpr, tpr, roc_auc):\n",
     "    '''Plot the ROC-AUC curve'''\n",
-    "    fig, ax = plt.subplots()\n",
+    "    fig, ax = plt.subplots()int\n",
     "    plt.title('Receiver Operating Characteristic (ROC)')\n",
     "    plt.plot(fpr, tpr, 'b', label = 'AUC = %0.2f' % roc_auc)\n",
     "    plt.legend(loc = 'lower right')\n",
